scrollbar styling fixed

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,25 @@
 ::selection{
   background: #fff;
 }
+
+::-webkit-scrollbar{
+  background-color: var(--color-back);
+  width: 15px;
+}
+::-webkit-scrollbar-track{
+  border-radius: 4px;
+  background-color: transparent;
+  margin-block: 4px;
+  padding-right: 4px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: #333333cc;
+  border-radius: 6px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+  
+}
+::-webkit-scrollbar-thumb:hover{
+  background-color: var(--color-primary);
+
+}
